Prevent statistics from wrapping when window becomes too narrow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -44,7 +44,7 @@ div[ui-view] {
   border-style: solid;
   border-width: 1px;
   border-color: $border-medium-color;
-  box-shadow: 0px 1px 5px $border-light-color;
+  box-shadow: 0 1px 5px $border-light-color;
 
   background-color: $content-area-background-color;
 
@@ -101,9 +101,8 @@ div[ui-view] {
 // ALERTS
 
 .alert {
-  box-sizing: border-box;
-
   position: absolute;
+  box-sizing: border-box;
   z-index: 1;
   left: 0;
   width: 100%;
@@ -185,7 +184,7 @@ breadcrumbs {
     border-width: 0 0 1px 0;
     border-radius: 0;
     border-color: $border-medium-color;
-    box-shadow: 0px 1px 5px $border-light-color;
+    box-shadow: 0 1px 5px $border-light-color;
 
     > li + li::before {
       padding: 0 0 0 5px;
@@ -321,13 +320,14 @@ input[type="checkbox"] {
 
     .navbar-statistics {
       position: absolute;
+      overflow: hidden;
       top: 0;
       bottom: 0;
       left: $navbar-height;
       right: $navbar-height;
 
-      line-height: $navbar-height;
       color: $text-dark-color;
+      line-height: $navbar-height;
 
       cursor: default;
     }
@@ -335,9 +335,9 @@ input[type="checkbox"] {
 
   .navbar-collapse {
     @media (max-width: 767px) {
-      border-bottom-width: 1px;
       border-bottom-style: solid;
-      box-shadow: 0px 1px 5px $border-light-color;
+      border-bottom-width: 1px;
+      box-shadow: 0 1px 5px $border-light-color;
 
       background-color: $navbar-background-color;
     }
